--- a/index.html
+++ b/index.html
@@ -44,26 +44,28 @@
                     </p>
                     <br>
                     <br>
-                    <div>
-                        <h4 class="text-white">CONTACT ME</h4>
-                        <br>
-                        <pre><a><i class="fa-solid fa-phone">  </i>+91 9207545745</a></pre>
-                        <pre><a class="a text-white" href=""><i class="fa-solid fa-envelope">  </i>aphari2013@gmail.com</a></pre>
-                        <pre><i class="fa-solid fa-location-dot"></i> Akkattu House,<br>  Rayonpuram p o,<br>  Perumbavoor,Kerala</a></pre>
-                        <pre><a class="l text-white" href="https://www.linkedin.com/in/harikrishnan-a-p-07aa34225/"><i class="fa-brands fa-linkedin"></i> Linked-in</a></pre>
-                    </div>
-                    <br>
-                    <br>
-                    <div>
-                        <h4>REFERENCES</h4>
-                        <br>
-                        <p>SURYA <br>
-                            LUMINAR <br>
-                            <i class="fa-solid fa-phone"></i>+91 89432 37927</p>
+                    <div class="row">
+                        <div class="col-lg-12 col-md-6 col-12">
+                            <h4 class="text-white">CONTACT ME</h4>
                             <br>
-                            <p>ASWATHY MADHU <br>
-                                ASAAD <br>
-                                <i class="fa-solid fa-phone"></i>+91  6282 786 307</p>
+                            <pre><a><i class="fa-solid fa-phone">  </i>+91 9207545745</a></pre>
+                            <pre><a class="a text-white" href=""><i class="fa-solid fa-envelope">  </i>aphari2013@gmail.com</a></pre>
+                            <pre><i class="fa-solid fa-location-dot"></i> Akkattu House,<br>  Rayonpuram p o,<br>  Perumbavoor,Kerala</a></pre>
+                            <pre><a class="l text-white" href="https://www.linkedin.com/in/harikrishnan-a-p-07aa34225/"><i class="fa-brands fa-linkedin"></i> Linked-in</a></pre>
+                        </div>
+                        <br>
+                        <br>
+                        <div class="col-lg-12 col-md-6 col-12">
+                            <h4>REFERENCES</h4>
+                            <br>
+                            <p>SURYA <br>
+                                LUMINAR <br>
+                                <i class="fa-solid fa-phone"></i>+91 89432 37927</p>
+
+                                <p>ASWATHY MADHU <br>
+                                    ASAAD <br>
+                                    <i class="fa-solid fa-phone"></i>+91  6282 786 307</p>
+                        </div>
                     </div>
                 </div>
             </div>
