--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
         </div>
     </div>
     <br>
+    <p style="color: white; text-align: center;"><i  class="fa-solid fa-copyright"></i> Copyright HarikrishananAP</p>
+    <br>
     <br>
 </body>
 
