--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </div>
     </div>
     <br>
-    <p style="color: white; text-align: center;"><i  class="fa-solid fa-copyright"></i> Copyright HarikrishananAP</p>
+    <p style="color: white; text-align: center;"><i  class="fa-solid fa-copyright"></i> Copyright HarikrishnanAP</p>
     <br>
     <br>
 </body>
